--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  background-color :aqua;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +11,28 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.heading{
+  color:blueviolet;
+  text-align: center;
+  text-transform :capitalize;
+  font-weight : bold;
+  margin: 50px 0;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.img_div{
+  display: flex;
+  justify-content: center;
+}
+.img-div img{
+  width: 200px;
+  height : 250px;
+ 
 }
